<resources>
    <string name="app_name">taxibedrijf-on-the-road</string>
    <string name="background_alt_text">Achtergrond met Logo</string>
    <string name="welcome_text">Welkom!</string>
    <string name="plate_search">Zoek op kenteken</string>
    <string name="input_hint">Voer hier het kenteken van de auto in:</string>
    <string name="go_back">Ga terug</string>
    <string name="no_plates_filter">Er zijn geen kentekens met uw filter.</string>
    <string name="select_plate">Selecteer een kenteken:</string>
    <string name="plate">Kenteken</string>
    <string name="on_the_road">Kenteken-tracker "On The Road"</string>
    <string name="details">Details</string>
    <string name="home">Home</string>
    <string name="profile">Profiel</string>
    <string name="no_plates">Nog geen kenteken geselecteerd.</string>
    <string name="handle">\@on_the_road</string>
</resources>