<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivAchtergrondLogo"
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:contentDescription="@string/background_alt_text"
        android:src="@mipmap/taxibedrijf_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="-16dp">

        <include layout="@layout/header_bar" />

        <TextView
            android:id="@+id/tvWelkomSubtitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166" />

        <Button
            android:id="@+id/btnVerzendKenteken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:backgroundTint="#46C580"
            android:text="@string/plate_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptKentekenInvoer"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:id="@+id/tvVraagKenteken"
            android:layout_width="242dp"
            android:layout_height="22dp"
            android:text="@string/input_hint"
            app:layout_constraintBottom_toTopOf="@+id/ptKentekenInvoer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelkomSubtitel" />

        <EditText
            android:id="@+id/ptKentekenInvoer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/plate"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelkomSubtitel"
            app:layout_constraintVertical_bias="0.072" />

        <ListView
            android:id="@+id/lstVoertuigen"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="30dp"
            android:fadeScrollbars="false"
            android:scrollbarSize="10dp"
            android:scrollbarThumbVertical="@drawable/custom_scrollbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVerzendKenteken"
            app:layout_constraintVertical_bias="0.515" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_plate"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGeenKentekensFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_plates_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>